[package]
name = "haneul-faucet"
version = "0.1.0"
edition = "2021"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
async-trait = "0.1.52"
axum = { version = "0.5.3" }
futures = "0.3.21"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = { version = "0.1.31", features = ["log"] }
tracing-subscriber = { version = "0.3.9", features = ["time", "registry", "env-filter"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }

haneul = { path = "../haneul" }
haneul-types = { path = "../haneul_types" }

[dev-dependencies]
tempfile = "3.3.0"

[[bin]]
name = "haneul-faucet"
path = "src/main.rs"
