[package]
name = "haneul-execution"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Multiplexer to choose between multiple versions of haneul and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
haneul-protocol-config.workspace = true
haneul-types.workspace = true

move-binary-format.workspace = true
move-vm-config.workspace = true

haneul-adapter-latest = { path = "latest/haneul-adapter" }
haneul-adapter-v0 = { path = "v0/haneul-adapter" }
# haneul-adapter-$CUT = { path = "$CUT/haneul-adapter" }
haneul-move-natives-latest = { path = "latest/haneul-move-natives" }
haneul-move-natives-v0 = { path = "v0/haneul-move-natives" }
# haneul-move-natives-$CUT = { path = "$CUT/haneul-move-natives" }
haneul-verifier-latest = { path = "latest/haneul-verifier" }
haneul-verifier-v0 = { path = "v0/haneul-verifier" }
# haneul-verifier-$CUT = { path = "$CUT/haneul-verifier" }

move-bytecode-verifier-latest = { path = "../external-crates/move/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move-execution/v0/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move-execution/$CUT/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/move-vm/runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move-execution/v0/move-vm/runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move-execution/$CUT/move-vm/runtime" }

workspace-hack = { version = "0.1", path = "../crates/workspace-hack" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"
