[package]
name = "haneul-execution"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Multiplexer to choose between multiple versions of haneul and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
haneul-protocol-config.workspace = true
haneul-types.workspace = true

move-binary-format.workspace = true
move-vm-config.workspace = true

haneul-adapter-latest = { path = "latest/haneul-adapter" }
haneul-adapter-v0 = { path = "v0/haneul-adapter" }
haneul-adapter-v1 = { path = "v1/haneul-adapter" }
haneul-adapter-next-vm = { path = "next-vm/haneul-adapter" }
# haneul-adapter-$CUT = { path = "$CUT/haneul-adapter" }
haneul-move-natives-latest = { path = "latest/haneul-move-natives" }
haneul-move-natives-v0 = { path = "v0/haneul-move-natives" }
haneul-move-natives-v1 = { path = "v1/haneul-move-natives" }
haneul-move-natives-next-vm = { path = "next-vm/haneul-move-natives" }
# haneul-move-natives-$CUT = { path = "$CUT/haneul-move-natives" }
haneul-verifier-latest = { path = "latest/haneul-verifier" }
haneul-verifier-v0 = { path = "v0/haneul-verifier" }
haneul-verifier-v1 = { path = "v1/haneul-verifier" }
haneul-verifier-next-vm = { path = "next-vm/haneul-verifier" }
# haneul-verifier-$CUT = { path = "$CUT/haneul-verifier" }

move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/move-vm/runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-next-vm = { path = "../external-crates/move/move-execution/next-vm/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }
workspace-hack.workspace = true

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
gas-profiler = [
    "haneul-adapter-latest/gas-profiler",
    "haneul-adapter-v0/gas-profiler",
    "haneul-adapter-v1/gas-profiler",
    "move-vm-runtime-next-vm/gas-profiler",
    "move-vm-runtime-v0/gas-profiler",
    "move-vm-runtime-v1/gas-profiler",
    "move-vm-runtime-latest/gas-profiler",
    "move-vm-config/gas-profiler",
]
