[package]
name = "haneul-execution"
version = "0.1.0"
authors = ["Haneul Labs <eng@haneul-labs.com>"]
description = "Multiplexer to choose between multiple versions of haneul and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
haneul-protocol-config.workspace = true
haneul-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-trace-format.workspace = true
move-vm-config.workspace = true

haneul-adapter-latest = { path = "latest/haneul-adapter" }
haneul-adapter-v0 = { path = "v0/haneul-adapter" }
haneul-adapter-v1 = { path = "v1/haneul-adapter" }
haneul-adapter-v2 = { path = "v2/haneul-adapter" }
# haneul-adapter-$CUT = { path = "$CUT/haneul-adapter" }
haneul-move-natives-latest = { path = "latest/haneul-move-natives" }
haneul-move-natives-v0 = { path = "v0/haneul-move-natives" }
haneul-move-natives-v1 = { path = "v1/haneul-move-natives" }
haneul-move-natives-v2 = { path = "v2/haneul-move-natives" }
# haneul-move-natives-$CUT = { path = "$CUT/haneul-move-natives" }
haneul-verifier-latest = { path = "latest/haneul-verifier" }
haneul-verifier-v0 = { path = "v0/haneul-verifier" }
haneul-verifier-v1 = { path = "v1/haneul-verifier" }
haneul-verifier-v2 = { path = "v2/haneul-verifier" }
# haneul-verifier-$CUT = { path = "$CUT/haneul-verifier" }

move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }
move-vm-types-latest = { path = "../external-crates/move/crates/move-vm-types", package = "move-vm-types" }
move-vm-types-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-types" }
move-vm-types-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-types" }
move-vm-types-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-types" }
# move-vm-types-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-types" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
tracing = [
    "haneul-adapter-latest/tracing",
    "haneul-adapter-v0/tracing",
    "haneul-adapter-v1/tracing",
  "haneul-adapter-v2/tracing",
#   "haneul-adapter-$CUT/tracing",
    "move-vm-runtime-v0/tracing",
    "move-vm-runtime-v1/tracing",
    "move-vm-runtime-latest/tracing",
  "move-vm-runtime-v2/tracing",
#   "move-vm-runtime-$CUT/tracing",
    "move-vm-config/tracing",
]
