[package]
name = "haneul"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rayon = "1.5.2"
anyhow = { version = "1.0.57", features = ["backtrace"] }
bytes = "1.1.0"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.80"
tempfile = "3.3.0"
tokio = { version = "1.18.2", features = ["full"] }
rand = "0.7.3"
toml = "0.5.9"
strum = "0.24.0"
strum_macros = "0.24.0"
num_cpus = "1.13.1"
base64ct = { version = "1.5.0", features = ["alloc"] }
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
rocksdb = "0.18.0"
hex = "0.4.3"
async-trait = "0.1.53"
serde_with = { version = "1.13.0", features = ["hex"] }
tracing = { version = "0.1.34", features = ["log"] }
tracing-subscriber = { version = "0.3.11", features = ["time", "registry", "env-filter"] }
serde-value = "0.7.0"
serde-name = "0.2.0"
dirs = "4.0.0"
clap = { version = "3.1.17", features = ["derive"] }
telemetry-subscribers = { git = "https://github.com/GeunhwaJeong/haneullabs-infra", rev = "3b7daedf91fd8937dde26e905b8114cac459b866" }

bcs = "0.1.3"
haneul_core = { path = "../haneul_core" }
haneul-adapter = { path = "../haneul_programmability/adapter" }
haneul-framework = { path = "../haneul_programmability/framework" }
haneul-network = { path = "../crates/haneul-network" }
haneul-types = { path = "../haneul_types" }
haneul-verifier = { path = "../haneul_programmability/verifier" }
haneul-open-rpc = { path = "open_rpc" }
haneul-open-rpc-macros = { path = "open_rpc/macros" }

rustyline = "9.1.2"
rustyline-derive = "0.6.0"
colored = "2.0.0"
unescape = "0.1.0"

move-package = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-core-types = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5", features = ["address20"] }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "3d80936565ef39550f99b37c7c1accde74069fc5" }

narwhal-node = { git = "https://github.com/GeunhwaJeong/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "node" }
narwhal-config = { git = "https://github.com/GeunhwaJeong/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "config" }
narwhal-crypto = { git = "https://github.com/GeunhwaJeong/narwhal", rev = "72efe71f0615f91f861cc658e031b763ba30fd5b", package = "crypto" }

once_cell = "1.10.0"

jsonrpsee = { version = "0.12.0", features = ["full"] }
jsonrpsee-proc-macros = "0.12.0"
schemars = "0.8.8"
shell-words = "1.1.0"

[dev-dependencies]
tracing-test = "0.2.1"
pretty_assertions = "1.2.0"
tokio-util = { version = "0.7.1", features = ["codec"] }

test_utils = { path = "../test_utils" }

[features]
benchmark = ["narwhal-node/benchmark"]

[[example]]
name = "generate-json-rpc-spec"
path = "src/generate_json_rpc_spec.rs"
test = false
