[package]
name = "haneul_core"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.17.0"
anyhow = "1.0.53"
bcs = "0.1.3"
futures = "0.3.19"
rand = "0.7.3"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
parking_lot = "0.12.0"
itertools = "0.10.3"
async-trait = "0.1.52"
tempfile = "3.3.0"
tracing = { version = "0.1", features = ["log"] }
signature = "1.5.0"
ed25519-dalek = "1.0.1"
structopt = "0.3.26"

haneul-adapter = { path = "../haneul_programmability/adapter" }
haneul-framework = { path = "../haneul_programmability/framework" }
haneul-network = { path = "../network_utils" }
haneul-types = { path = "../haneul_types" }

move-binary-format = { git = "https://github.com/diem/move", rev = "7683d09732dd930c581583bf5fde97fb7ac02ff7" }
move-bytecode-utils = { git = "https://github.com/diem/move", rev = "7683d09732dd930c581583bf5fde97fb7ac02ff7" }
move-core-types = { git = "https://github.com/diem/move", rev = "7683d09732dd930c581583bf5fde97fb7ac02ff7", features = ["address20"] }
move-package = { git = "https://github.com/diem/move", rev = "7683d09732dd930c581583bf5fde97fb7ac02ff7" }
move-vm-runtime = { git = "https://github.com/diem/move", rev = "7683d09732dd930c581583bf5fde97fb7ac02ff7" }

typed-store = { git = "https://github.com/GeunhwaJeong/haneullabs-infra", rev = "d04c29e686aba380e6f9fc0c60a2dfdb974c5f8a"}

[dev-dependencies]
fdlimit = "0.2.1"
naughty-strings = "0.2.4"
similar-asserts = { version = "1.1.0" }
serde-reflection = "0.3.2"
serde_yaml = "0.8.17"
assert-str = "0.1.0"

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false
