[package]
name = "haneul_core"
version = "0.1.0"
authors = ["Haneul Labs <build@haneul-labs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
rocksdb = "0.18.0"
anyhow = "1.0.55"
bcs = "0.1.3"
futures = "0.3.21"
rand = "0.7.3"
bytes = "1.1.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
parking_lot = "0.12.0"
itertools = "0.10.3"
async-trait = "0.1.52"
tempfile = "3.3.0"
tracing = { version = "0.1.31", features = ["log"] }
signature = "1.5.0"
ed25519-dalek = "1.0.1"
structopt = "0.3.26"
log = "0.4.14"

haneul-adapter = { path = "../haneul_programmability/adapter" }
haneul-framework = { path = "../haneul_programmability/framework" }
haneul-network = { path = "../network_utils" }
haneul-types = { path = "../haneul_types" }

move-binary-format = { git = "https://github.com/diem/move", rev = "584bfc8c5f8e582223581975106ffa2545677e2a" }
move-bytecode-utils = { git = "https://github.com/diem/move", rev = "584bfc8c5f8e582223581975106ffa2545677e2a" }
move-core-types = { git = "https://github.com/diem/move", rev = "584bfc8c5f8e582223581975106ffa2545677e2a", features = ["address20"] }
move-package = { git = "https://github.com/diem/move", rev = "584bfc8c5f8e582223581975106ffa2545677e2a" }
move-vm-runtime = { git = "https://github.com/diem/move", rev = "584bfc8c5f8e582223581975106ffa2545677e2a" }

typed-store = { git = "https://github.com/GeunhwaJeong/haneullabs-infra", rev = "a36c852c30729a16ee3c8a6a863f654887f0c30e"}

[dev-dependencies]
fdlimit = "0.2.1"
naughty-strings = "0.2.4"
similar-asserts = "1.2.0"
serde-reflection = "0.3.5"
serde_yaml = "0.8.23"
assert-str = "0.1.0"

[[example]]
name = "generate-format"
path = "src/generate_format.rs"
test = false
